@@ -9,6 +9,7 @@
 	* src/GrampsDb/_GrampsBSDDB.py (load): Do not create logs when TXN
 	is disabled;
 	(gramps_upgrade_9): Include upgrade_11 steps into upgrade_9.
+	* src/GrampsDb/_GrampsBSDDB.py: More upgrade fixes.
 
 2006-10-05  Alex Roitman  <shura@gramps-project.org>
 	* src/DataViews/_PersonView.py (set_inactive): Check active status.
